[package]
name = "bl602-rtt-test"
version = "0.1.0"
edition = "2018"

[dependencies]
riscv-rt = "0.8.0"
bl602-hal = { git = "https://github.com/sipeed/bl602-hal", branch="main" }
riscv = "0.7.0"
embedded-time = "0.12.0"
nb = "1.0.0"
blash-target = { git = "https://github.com/bjoernQ/blash-target", branch="main",  features = ["panic_backtrace", "exception_backtrace"] }
